--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -587,6 +587,7 @@
         "        super(YoloMNIST, self).__init__()\n",
         "        self.S, self.C, self.B = S, C, B\n",
         "        self.sizeHW = sizeHW\n",
+        "        self.cell_size = self.sizeHW / self.S\n",
         "\n",
         "        self.seq = torch.nn.Sequential()        \n",
         "        self.seq.add_module(f\"conv_1\", CNNBlock(1, 32, stride=2, kernel_size=7, padding=2))\n",
@@ -630,7 +631,6 @@
         "            cy = bbox_relative[:,3]\n",
         "            rw = bbox_relative[:,4]\n",
         "            rh = bbox_relative[:,5]\n",
-        "\n",
         "        else : \n",
         "            \"\"\"cx, cy are relative to the cell\"\"\"\n",
         "            assert (idx_cell_x != None) and (idx_cell_y != None) , \"You need to specify a grid position idx_cell_x and idx_cell_y.\"\n",
@@ -639,9 +639,8 @@
         "            rw = bbox_relative[:,2]\n",
         "            rh = bbox_relative[:,3]\n",
         "\n",
-        "            cx = cx_rcell * self.S + (idx_cell_x * self.S)\n",
-        "            cy = cy_rcell * self.S + (idx_cell_y * self.S)\n",
-        "\n",
+        "            cx = cx_rcell * self.cell_size + (idx_cell_x * self.cell_size)\n",
+        "            cy = cy_rcell * self.cell_size + (idx_cell_y * self.cell_size)\n",
         "\n",
         "        cx_abs = self.sizeHW * cx\n",
         "        cy_abs = self.sizeHW * cy\n",
@@ -662,18 +661,21 @@
         "        pred_box = self._relative2absolute(pred_box, False, idx_cell_x, idx_cell_y)\n",
         "        true_box = self._relative2absolute(true_box, True)\n",
         "        \n",
-        "        # xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box\n",
-        "        # xmin_true, ymin_true, xmax_true, ymax_true = true_box\n",
+        "        #### THIS IS A TEST\n",
+        "        xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box.permute(1,0)\n",
+        "        xmin_true, ymin_true, xmax_true, ymax_true = true_box.permute(1,0)\n",
         "\n",
-        "        xmin_pred = pred_box[:,0]\n",
-        "        ymin_pred = pred_box[:,1]\n",
-        "        xmax_pred = pred_box[:,2]\n",
-        "        ymax_pred = pred_box[:,3]\n",
+        "        # xmin_pred = pred_box[:,0]\n",
+        "        # ymin_pred = pred_box[:,1]\n",
+        "        # xmax_pred = pred_box[:,2]\n",
+        "        # ymax_pred = pred_box[:,3]\n",
         "\n",
-        "        xmin_true = true_box[:,0]\n",
-        "        ymin_true = true_box[:,1]\n",
-        "        xmax_true = true_box[:,2]\n",
-        "        ymax_true = true_box[:,3]\n",
+        "        # xmin_true = true_box[:,0]\n",
+        "        # ymin_true = true_box[:,1]\n",
+        "        # xmax_true = true_box[:,2]\n",
+        "        # ymax_true = true_box[:,3]\n",
+        "        #############################\n",
+        "\n",
         "\n",
         "        smoothing_factor = 1e-10\n",
         "\n",
@@ -716,50 +718,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 157,
+      "execution_count": 237,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "tensor([[1.3740e-13, 1.3345e-13, 1.3103e-13, 1.3116e-13, 1.3404e-13, 1.2593e-13],\n",
-            "        [1.2930e-13, 1.1007e-13, 1.2851e-13, 2.2244e-13, 9.9547e-14, 1.1974e-13],\n",
-            "        [8.5395e-14, 1.1525e-13, 1.2282e-13, 7.9267e-14, 1.3381e-13, 1.3067e-13],\n",
-            "        [1.1036e-13, 1.3298e-13, 1.1461e-13, 1.2491e-13, 1.2464e-13, 1.0379e-13],\n",
-            "        [1.1575e-13, 1.1533e-13, 1.2506e-13, 1.2778e-13, 7.2389e-13, 1.2822e-13],\n",
-            "        [1.2516e-13, 1.1795e-13, 1.4050e-13, 1.2461e-13, 1.4052e-13, 1.2976e-13]],\n",
-            "       grad_fn=<SelectBackward0>)\n"
+            "torch.Size([1, 6])\n",
+            "torch.Size([1, 4])\n",
+            "tensor([[0.0405, 0.0619, 0.5067, 0.7733, 0.3733, 0.3733]])\n",
+            "tensor([[0.0405, 0.0619, 0.3733, 0.3733]])\n"
           ]
         }
       ],
       "source": [
-        "for i in range(6):\n",
-        "    for j in range(6):\n",
-        "        pc_pred[:,i,j] = model_MNIST.intersection_over_union(bbox_pred[:,i,j], k[2], i, j)\n",
-        "\n",
-        "\n",
-        "print(pc_pred[54])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 158,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "torch.Size([64, 6])"
-            ]
-          },
-          "execution_count": 158,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "k[2].shape"
+        "########### CELLULE TEST ##############################################\n",
+        "bbox_true = k[2][:1]\n",
+        "print(bbox_true.shape)\n",
+        "bbox_true = torch.concat((bbox_true[0][0:2], bbox_true[0][4::])).unsqueeze(0)\n",
+        "print(bbox_true.shape)\n",
+        "print(k[2][:1])\n",
+        "print(bbox_true)\n",
+        "#######################################################################"
       ]
     },
     {
@@ -819,46 +800,12 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 58,
+      "execution_count": 159,
       "metadata": {},
       "outputs": [],
       "source": [
-        "toto = bbox_pred[:, 1, 1]"
+        "toto = torch.rand((64, 4))"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 59,
-      "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "torch.Size([64, 4])"
-            ]
-          },
-          "execution_count": 59,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
-      "source": [
-        "toto.shape"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -904,61 +851,6 @@
       "metadata": {},
       "outputs": [],
       "source": []
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 306,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "\n",
-        "def relative2absolute(bbox_relative, isGroundTruth, classifier, true_label):\n",
-        "    if isGroundTruth :\n",
-        "        \"\"\"cx, cy are relative to the image size\"\"\"\n",
-        "        cx = bbox_relative[:,:,:,2]\n",
-        "        cy = bbox_relative[:,:,:,3]\n",
-        "        rw = bbox_relative[:,:,:,4]\n",
-        "        rh = bbox_relative[:,:,:,5]\n",
-        "\n",
-        "        cx_abs, cy_abs =  sizeHW * cx, self.sizeHW * cy\n",
-        "        x_min = cx_abs - (sizeHW * (rw/2))\n",
-        "        y_min = cy_abs - (sizeHW * (rh/2))\n",
-        "        x_max = cx_abs + (sizeHW * (rw/2))\n",
-        "        y_max = cy_abs + (sizeHW * (rh/2))\n",
-        "\n",
-        "    else : \n",
-        "        \"\"\"cx, cy are relative to the cell\"\"\"\n",
-        "        grid_digit = torch.argmax(classifier, dim=-1)\n",
-        "        pass\n",
-        "\n",
-        "\n",
-        "\n",
-        "    return x_min, y_min, x_max, y_max\n",
-        "\n",
-        "def intersection_over_union(pred_box, true_box, classifier=None, true_label=None):\n",
-        "    pred_box = relative2absolute(pred_box, False, classifier, true_label)\n",
-        "    true_box = relative2absolute(true_box, True)\n",
-        "    \n",
-        "    xmin_pred, ymin_pred, xmax_pred, ymax_pred = pred_box\n",
-        "    xmin_true, ymin_true, xmax_true, ymax_true = true_box\n",
-        "\n",
-        "    smoothing_factor = 1e-10\n",
-        "\n",
-        "    xmin_overlap = torch.maximum(xmin_pred, xmin_true)\n",
-        "    xmax_overlap = torch.minimum(xmax_pred, xmax_true)\n",
-        "    ymin_overlap = torch.maximum(ymin_pred, ymin_true)\n",
-        "    ymax_overlap = torch.minimum(ymax_pred, ymax_true)\n",
-        "\n",
-        "    pred_box_area = (xmax_pred - xmin_pred) * (ymax_pred - ymin_pred)\n",
-        "    true_box_area = (xmax_true - xmin_true) * (ymax_true - ymin_true)\n",
-        "\n",
-        "    overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]))  * np.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]))\n",
-        "    union_area = (pred_box_area + true_box_area) - overlap_area\n",
-        "    \n",
-        "    iou = (overlap_area + smoothing_factor) / (union_area + smoothing_factor)\n",
-        "\n",
-        "    return iou\n"
-      ]
     },
     {
       "cell_type": "code",
