--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -578,7 +578,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 133,
+      "execution_count": 258,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -655,7 +655,7 @@
         "    def intersection_over_union(self, pred_box, true_box, idx_cell_x, idx_cell_y):\n",
         "        \"\"\"\n",
         "        args:\n",
-        "        pred_box -> shape : [N x S x S x 4]\n",
+        "        pred_box -> shape : [N x 4] since it is execute in double loop idx_cell_x/y\n",
         "        true_box -> shape : [N x 4]\n",
         "        \"\"\"        \n",
         "        pred_box = self._relative2absolute(pred_box, False, idx_cell_x, idx_cell_y)\n",
@@ -684,36 +684,22 @@
         "        ymin_overlap = torch.maximum(ymin_pred, ymin_true)\n",
         "        ymax_overlap = torch.minimum(ymax_pred, ymax_true)\n",
         "        \n",
-        "        ##########################################\n",
-        "\n",
         "        pred_box_area = (xmax_pred - xmin_pred) * (ymax_pred - ymin_pred)\n",
         "        true_box_area = (xmax_true - xmin_true) * (ymax_true - ymin_true)\n",
         "       \n",
         "        overlap_area = torch.maximum((xmax_overlap - xmin_overlap), torch.Tensor([0]))  * torch.maximum((ymax_overlap - ymin_overlap), torch.Tensor([0]))\n",
-        "       \n",
         "        union_area = (pred_box_area + true_box_area) - overlap_area\n",
-        "        \n",
         "        iou = (overlap_area + smoothing_factor) / (union_area + smoothing_factor)\n",
-        "\n",
         "        return iou\n",
         "    \n",
         "    def forward(self, input):\n",
         "        x = self.seq(input)\n",
         "        x = self.fcs(x)\n",
         "        x = x.view(x.size(0), self.S, self.S, self.B * 5 + self.C)\n",
-        "        pc = x[:,:,:,1]\n",
+        "        pc = x[:,:,:,0]\n",
         "        bbx_coord = x[:,:,:,1:5]\n",
         "        classifier = x[:,:,:,5:]\n",
         "        return pc, bbx_coord, classifier"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 134,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)"
       ]
     },
     {
@@ -733,6 +719,7 @@
         }
       ],
       "source": [
+        "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)\n",
         "########### CELLULE TEST ##############################################\n",
         "bbox_true = k[2][:1]\n",
         "print(bbox_true.shape)\n",
@@ -740,76 +727,22 @@
         "print(bbox_true.shape)\n",
         "print(k[2][:1])\n",
         "print(bbox_true)\n",
-        "#######################################################################"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 31,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "La taille d'un élément est de :  3\n",
-            "Le premier élément est l'image de shape :  torch.Size([64, 1, 75, 75])\n",
-            "Le deuxieme élément est les label de shape :  torch.Size([64, 10])\n",
-            "Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] :  torch.Size([64, 6])\n"
-          ]
-        }
-      ],
-      "source": [
+        "#######################################################################\n",
         "for k in training_dataset:\n",
         "    break\n",
         "print(\"La taille d'un élément est de : \", len(k))\n",
         "print(\"Le premier élément est l'image de shape : \", k[0].shape)\n",
         "print(\"Le deuxieme élément est les label de shape : \", k[1].shape)\n",
-        "print(\"Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] : \", k[2].shape)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 78,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "pc_pred, bbox_pred, class_pred = model_MNIST(k[0])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 38,
-      "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "Le premier élément est une grille de shape :  torch.Size([64, 6, 6])  correspondant aux nombres pc sur les 6x6 cellules\n",
-            "Le deuxieme élement est, une grille de shape :  torch.Size([64, 6, 6, 4])  correspondant aux [xc_rcell, yc_rcell, rw, rh]\n",
-            "Le troisieme élement est, une grille de shape :  torch.Size([64, 6, 6, 10])  correspondant à des softmax vect sur chaque cellule de grille\n"
-          ]
-        }
-      ],
-      "source": [
+        "print(\"Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] : \", k[2].shape)\n",
+        "pc_pred, bbox_pred, class_pred = model_MNIST(k[0])\n",
         "print(\"Le premier élément est une grille de shape : \", model_MNIST(k[0])[0].shape, \" correspondant aux nombres pc sur les 6x6 cellules\")\n",
         "print(\"Le deuxieme élement est, une grille de shape : \", model_MNIST(k[0])[1].shape, \" correspondant aux [xc_rcell, yc_rcell, rw, rh]\")\n",
-        "print(\"Le troisieme élement est, une grille de shape : \", model_MNIST(k[0])[2].shape, \" correspondant à des softmax vect sur chaque cellule de grille\")\n"
+        "print(\"Le troisieme élement est, une grille de shape : \", model_MNIST(k[0])[2].shape, \" correspondant à des softmax vect sur chaque cellule de grille\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 159,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "toto = torch.rand((64, 4))"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": 374,
+      "execution_count": 260,
       "metadata": {},
       "outputs": [
         {
@@ -828,6 +761,58 @@
             "    weight_decay: 0\n",
             ")\n"
           ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "==========================================================================================\n",
+              "Layer (type:depth-idx)                   Output Shape              Param #\n",
+              "==========================================================================================\n",
+              "YoloMNIST                                [64, 6, 6]                --\n",
+              "├─Sequential: 1-1                        [64, 128, 6, 6]           --\n",
+              "│    └─CNNBlock: 2-1                     [64, 32, 37, 37]          --\n",
+              "│    │    └─Conv2d: 3-1                  [64, 32, 37, 37]          1,568\n",
+              "│    │    └─BatchNorm2d: 3-2             [64, 32, 37, 37]          64\n",
+              "│    │    └─LeakyReLU: 3-3               [64, 32, 37, 37]          --\n",
+              "│    └─MaxPool2d: 2-2                    [64, 32, 18, 18]          --\n",
+              "│    └─CNNBlock: 2-3                     [64, 128, 16, 16]         --\n",
+              "│    │    └─Conv2d: 3-4                  [64, 128, 16, 16]         36,864\n",
+              "│    │    └─BatchNorm2d: 3-5             [64, 128, 16, 16]         256\n",
+              "│    │    └─LeakyReLU: 3-6               [64, 128, 16, 16]         --\n",
+              "│    └─MaxPool2d: 2-4                    [64, 128, 8, 8]           --\n",
+              "│    └─CNNBlock: 2-5                     [64, 64, 8, 8]            --\n",
+              "│    │    └─Conv2d: 3-7                  [64, 64, 8, 8]            8,192\n",
+              "│    │    └─BatchNorm2d: 3-8             [64, 64, 8, 8]            128\n",
+              "│    │    └─LeakyReLU: 3-9               [64, 64, 8, 8]            --\n",
+              "│    └─CNNBlock: 2-6                     [64, 128, 6, 6]           --\n",
+              "│    │    └─Conv2d: 3-10                 [64, 128, 6, 6]           73,728\n",
+              "│    │    └─BatchNorm2d: 3-11            [64, 128, 6, 6]           256\n",
+              "│    │    └─LeakyReLU: 3-12              [64, 128, 6, 6]           --\n",
+              "│    └─CNNBlock: 2-7                     [64, 128, 6, 6]           --\n",
+              "│    │    └─Conv2d: 3-13                 [64, 128, 6, 6]           147,456\n",
+              "│    │    └─BatchNorm2d: 3-14            [64, 128, 6, 6]           256\n",
+              "│    │    └─LeakyReLU: 3-15              [64, 128, 6, 6]           --\n",
+              "├─Sequential: 1-2                        [64, 540]                 --\n",
+              "│    └─Flatten: 2-8                      [64, 4608]                --\n",
+              "│    └─Linear: 2-9                       [64, 4096]                18,878,464\n",
+              "│    └─LeakyReLU: 2-10                   [64, 4096]                --\n",
+              "│    └─Linear: 2-11                      [64, 540]                 2,212,380\n",
+              "==========================================================================================\n",
+              "Total params: 21,359,612\n",
+              "Trainable params: 21,359,612\n",
+              "Non-trainable params: 0\n",
+              "Total mult-adds (G): 2.63\n",
+              "==========================================================================================\n",
+              "Input size (MB): 1.44\n",
+              "Forward/backward pass size (MB): 94.42\n",
+              "Params size (MB): 85.44\n",
+              "Estimated Total Size (MB): 181.30\n",
+              "=========================================================================================="
+            ]
+          },
+          "execution_count": 260,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -842,15 +827,8 @@
         "classification_loss = nn.CrossEntropyLoss()\n",
         "\n",
         "print(optimizer)\n",
-        "summary(model_MNIST, input_size = (BATCH_SIZE,1,75,75));"
+        "summary(model_MNIST, input_size = (BATCH_SIZE,1,75,75))"
       ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": []
     },
     {
       "cell_type": "code",
@@ -903,9 +881,8 @@
         "        img, labels, bbox_coords, _ = img.to(device), labels.to(device), bbox_coords.to(device), pc.to(device)\n",
         "        optimizer.zero_grad()\n",
         "        \n",
-        "        [bbox_coords_preds, label_preds] = model_MNIST(img)\n",
+        "        [pc, bbox_coords_preds, label_preds] = model_MNIST(img)\n",
         "\n",
-        "        pc_preds = 1 #TEMP\n",
         "        for i in range(size_grid):\n",
         "            for j in range(size_grid):\n",
         "                class_loss = classification_loss(label_preds, labels)\n",
@@ -913,10 +890,9 @@
         "                pc_loss = isDigit_loss(pc_preds, pc)\n",
         "        \n",
         "        ### TODO \n",
-        "        ### PC = IoU(bbox, bbox_hat)\n",
-        "        ### >>> save the grid indx for each predicted bbox >>> permit to\n",
-        "        ### retrives cx, cy locations relative to the image\n",
-        "        ### cx_rcell * size_cell + ( cell_idx * size_cell)\n",
+        "        ### IoU over 6x6 cells\n",
+        "        ### Loss over 6x6 cells\n",
+        "\n",
         "\n",
         "\n",
         "        \n",
