bbox2bboxTensor function + starting YoloLoss class + todo list.

--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -797,25 +797,27 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 26,
+      "execution_count": 59,
       "metadata": {
-        "id": "UrYIfm2he-CV",
-        "outputId": "d9590778-7678-4274-8883-59b97e623f99",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "UrYIfm2he-CV",
+        "outputId": "53b396b5-2215-4b1a-ad76-119a46a5c044"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
+            "### OUTPUT DATASET ###\n",
             "La taille d'un élément est de :  3\n",
             "Le premier élément est l'image de shape :  torch.Size([64, 1, 75, 75])\n",
             "Le deuxieme élément est les label de shape :  torch.Size([64, 10])\n",
             "Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] :  torch.Size([64, 6])\n",
             "\n",
             "\n",
+            "### OUTPUT PRED ###\n",
             "Le premier élément est une grille de shape :  torch.Size([64, 6, 6])  correspondant aux nombres pc sur les 6x6 cellules\n",
             "Le deuxieme élement est, une grille de shape :  torch.Size([64, 6, 6, 4])  correspondant aux [xc_rcell, yc_rcell, rw, rh]\n",
             "Le troisieme élement est, une grille de shape :  torch.Size([64, 6, 6, 10])  correspondant à des softmax vect sur chaque cellule de grille\n",
@@ -823,8 +825,8 @@
             "\n",
             "torch.Size([1, 6])\n",
             "torch.Size([1, 4])\n",
-            "tensor([0.0555, 0.0181, 0.6933, 0.2267, 0.3733, 0.3733])\n",
-            "tensor([[0.0555, 0.0181, 0.3733, 0.3733]])\n"
+            "tensor([0.0619, 0.0149, 0.7733, 0.1867, 0.3733, 0.3733])\n",
+            "tensor([[0.0619, 0.0149, 0.3733, 0.3733]])\n"
           ]
         }
       ],
@@ -833,11 +835,14 @@
         "model_MNIST = YoloMNIST(sizeHW=75, S=6, C=10, B=1)\n",
         "for k in training_dataset:\n",
         "    break\n",
+        "print(\"### OUTPUT DATASET ###\")\n",
         "print(\"La taille d'un élément est de : \", len(k))\n",
         "print(\"Le premier élément est l'image de shape : \", k[0].shape)\n",
         "print(\"Le deuxieme élément est les label de shape : \", k[1].shape)\n",
         "print(\"Le dernier élément est la bbox [xc_rcell, yc_rcell, xc, yc, rw, hw] : \", k[2].shape)\n",
         "print(\"\\n\")\n",
+        "\n",
+        "print(\"### OUTPUT PRED ###\")\n",
         "pc_pred, bbox_pred, class_pred = model_MNIST(k[0])\n",
         "print(\"Le premier élément est une grille de shape : \", model_MNIST(k[0])[0].shape, \" correspondant aux nombres pc sur les 6x6 cellules\")\n",
         "print(\"Le deuxieme élement est, une grille de shape : \", model_MNIST(k[0])[1].shape, \" correspondant aux [xc_rcell, yc_rcell, rw, rh]\")\n",
@@ -857,29 +862,33 @@
       "cell_type": "code",
       "source": [
         "def bbox2bboxTensor(bbox, S):\n",
-        "    bbox_t = torch.zeros(S,S,4)\n",
+        "    \"\"\"\n",
+        "    Put xc_rcell, yc_rcell in the right cell grid i,j\n",
+        "    \"\"\"\n",
+        "    bbox_t = torch.zeros(S,S,5)\n",
         "    gcell_size = 1/S\n",
         "\n",
         "    for coord in bbox:\n",
         "        xc_rcell, yc_rcell, xc, yc, rw, rh = bbox\n",
-        "        bbox_t[int(yc / gcell_size), int(xc / gcell_size)] = torch.tensor([xc_rcell, yc_rcell, rw, rh])\n",
+        "        bbox_t[int(yc / gcell_size), int(xc / gcell_size)] = torch.tensor([1, xc_rcell, yc_rcell, rw, rh])\n",
         "    return bbox_t"
       ],
       "metadata": {
         "id": "OdIlkN61mXJj"
       },
-      "execution_count": 56,
+      "execution_count": 62,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "a = bbox2bboxTensor(torch.Tensor([0.0555, 0.0181, 0.6933, 0.2267, 0.3733, 0.3733]), 6)"
+        "a = bbox2bboxTensor(torch.Tensor([0.0555, 0.0181, 0.6933, 0.2267, 0.3733, 0.3733]), 6)\n",
+        "a"
       ],
       "metadata": {
         "id": "VUvnQofxoGlC"
       },
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -979,13 +988,39 @@
       "cell_type": "code",
       "source": [
         "class YoloLoss(torch.nn.Module):\n",
-        "    def __init__(self):\n",
+        "    def __init__(self, lambd_coord, lambd_noobj, S):\n",
         "        super(YoloLoss, self).__init__()\n",
-        "        \n",
+        "        self.lambd_coord = lambd_coord\n",
+        "        self.lambd_noobj = lambd_noobj\n",
+        "        self.S = S\n",
+        "\n",
+        "    def loss_over_coord(self, pred_coord_rcell, true_coord_rcell):\n",
+        "        xc_hat, yc_hat = pred_coord_rcell\n",
+        "        xc, yc = true_coord_rcell\n",
+        "        squared_error = torch.pow(xc - xc_hat,2) - torch.pow(yc - yc_hat,2)\n",
+        "        return squared_error\n",
+        "\n",
+        "    def loss_over_size(self, pred_size, true_size):\n",
+        "        rw_hat, rh_hat = pred_size\n",
+        "        rw, rh = true_size\n",
+        "        root_squared_error_w = torch.pow(torch.sqrt(rw) - torch.sqrt(rw_hat),2)\n",
+        "        root_squared_error_h = torch.pow(torch.sqrt(rw) - torch.sqrt(rw_hat),2)\n",
+        "        root_squared_error = root_squared_error_w - root_squared_error_h\n",
+        "        return root_squared_error\n",
+        "\n",
+        "    def loss_over_confidence(self, pred_pc, pc):\n",
+        "        squared_error = torch.pow(pc - pred_pc,2)\n",
+        "        return squared_error\n",
         "\n",
         "\n",
-        "    def forward(self):\n",
-        "        pass"
+        "    def forward(self, pred, truth):\n",
+        "        pass\n",
+        "\n",
+        "########## TODO\n",
+        "########## REVOIR LES DIMENSIONS DE CHAQUE TRUCS...\n",
+        "########## PEUT ETRE OUTPUT UN TENSOR S*S*5 DANS LE DATASET\n",
+        "########## QUAND EST CE QUON UTILISE LE IOU ???\n",
+        "########## REFLECHIR A SI ON FAIT LA SOMME DES LOSS DANS LA CLASS() OU DANS LA TRAINING LOOP ?\n"
       ],
       "metadata": {
         "id": "T_jOg_i_p2_c"
