Working on isObject or not.

--- a/YOLO_MNIST_Localization.ipynb
+++ b/YOLO_MNIST_Localization.ipynb
@@ -741,20 +741,20 @@
         "        return iou   \n",
         "\n",
         "\n",
-        "    def forward(self, pred:torch.Tensor, truth:torch.Tensor, isObject:bool)->torch.Tensor:\n",
+        "    def forward(self, pred_box:torch.Tensor, true_box:torch.Tensor, pred_class, true_class)->torch.Tensor:\n",
         "        \"\"\"\n",
         "        Forward pass for the current grid cell.\n",
         "\n",
         "        Args:\n",
-        "            pred : torch.Tensor of shape (N, 4+1+10)\n",
+        "            pred_box : torch.Tensor of shape (N, 5)\n",
         "                Batch predicted outputs containing xc_rcell, yc_rcell, rw, rh,\n",
-        "                confident number c and the one-hot vect of the digit class.\n",
-        "            truth : torch.Tensor of shape (N, 4+10) >>> 5+10 ???\n",
-        "                Groundtrue batch containing bbox values and digit class one-hot vect.\n",
-        "            isObject : bool\n",
-        "                Indicates if the center of the groundtrue bbox is in the current\n",
-        "                grid cell. In other words, indicates if there is an object to \n",
-        "                detect in this grid cell.  \n",
+        "                and confident number c.\n",
+        "            true_box : torch.Tensor of shape (N, 5)\n",
+        "                Groundtrue batch containing bbox values and c=1 which indicate that\n",
+        "                there is an object to detect.\n",
+        "            pred_class : torch.Tensor of shape (N, 10)\n",
+        "                Softmax probability of each digit class ### SOFTMAX ???\n",
+        "            true_class : one-hot vect of each digit\n",
         "\n",
         "        Return:\n",
         "            loss : float\n",
@@ -766,13 +766,16 @@
         "        pred_class = pred[:,5:]\n",
         "        true_class = truth[:,4:]\n",
         "\n",
-        "        c = torch.Tensor([isObject])\n",
-        "        pred_c = pred[:,4] * self._intersection_over_union(pred_box, true_box)\n",
+        "        pred_c = pred_box[:,4] * self._intersection_over_union(pred_box, true_box)\n",
+        "        if true_box[:, 4]:\n",
+        "            isObject = True\n",
+        "        else\n",
+        "            isObject = False\n",
         "\n",
         "        loss_1 = isObject * self._loss_over_coord(pred_box[:,:2], true_box[:,:2])\n",
         "        loss_2 = isObject * self._loss_over_size(pred_box[:,2:], true_box[:,2:])\n",
-        "        loss_3 = isObject * self._loss_over_confidence(pred_c, c) # ?????\n",
-        "        loss_3b = (1-isObject) * self._loss_over_confidence(pred_c, c) ### ???  \n",
+        "        loss_3 = isObject * self._loss_over_confidence(pred_c, c)\n",
+        "        loss_3b = (1-isObject) * self._loss_over_confidence(pred_c, c) \n",
         "        loss_4 = isObject * self._loss_over_classprob(pred_class, true_class)\n",
         "\n",
         "        loss = self.lambd_coord*loss_1 + self.lambd_coord*loss_2 + loss_3 \\\n",
@@ -809,7 +812,6 @@
         "    \"\"\"\n",
         "    N = len(bbox)\n",
         "    bbox_t = torch.zeros(N,S,S,4)\n",
-        "    gcell_size = 1/S\n",
         "    cell_size = sizeHW/S\n",
         "\n",
         "    xc_rcell, yc_rcell, rw, rh = bbox.permute(1,0)\n",
@@ -817,24 +819,24 @@
         "    yc = yc_rcell * cell_size - (1/cell_size) * (yc_rcell/cell_size).to(torch.int32)\n",
         "\n",
         "    N_range = torch.arange(N)\n",
-        "    lines = (yc / gcell_size).to(torch.long)\n",
-        "    columns = (xc / gcell_size).to(torch.long)\n",
-        "    bbox_t[N_range, lines, columns] = torch.stack((xc_rcell, yc_rcell, rw, rh)).permute(1,0)\n",
+        "    lines = (yc * S).to(torch.long)\n",
+        "    columns = (xc * S).to(torch.long)\n",
+        "    bbox_t[N_range, lines, columns] = torch.stack((xc_rcell, yc_rcell, rw, rh, torch.ones(N,1))).permute(1,0)\n",
         "    \n",
         "    return bbox_t"
       ],
       "metadata": {
         "id": "OdIlkN61mXJj"
       },
-      "execution_count": 138,
+      "execution_count": 139,
       "outputs": []
     },
     {
       "cell_type": "code",
-      "execution_count": 137,
+      "execution_count": 140,
       "metadata": {
         "id": "mHUOkfWPe-CW",
-        "outputId": "f54c6b56-ec91-40b4-86b6-e8f119334b64",
+        "outputId": "7f78fc88-f28a-48a8-8a7e-7bdef0419212",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -907,7 +909,7 @@
             ]
           },
           "metadata": {},
-          "execution_count": 137
+          "execution_count": 140
         }
       ],
       "source": [
@@ -991,14 +993,17 @@
         "        \n",
         "        bbox_preds, label_preds = model_MNIST(img)\n",
         "        \n",
-        "        bbox_preds_6x6 = bbox2Tensor(bbox_preds)\n",
         "        bbox_true_6x6 = bbox2Tensor(bbox_true)\n",
         "        \n",
         "        ############### REFLECHIR ICI\n",
         "        loss = 0\n",
         "        for i in range(size_grid):\n",
         "            for j in range(size_grid):\n",
-        "                loss += loss_yolo(bbox_preds_6x6[:,i,j], bbox_true_6x6[:,i,j], )\n",
+        "                loss += loss_yolo(bbox_preds[:,i,j], bbox_true_6x6[:,i,j], )\n",
+        "        \n",
+        "        \n",
+        "        \n",
+        "    if False:\n",
         "        loss.backward()\n",
         "\n",
         "        ############### REFLECHIR ICI\n",
@@ -1026,7 +1031,7 @@
         "            if batch+1 == (len_training_ds//BATCH_SIZE)+1:\n",
         "                print(f\"Total elapsed time for training : {datetime.timedelta(seconds=timer()-begin_time)}\")\n",
         "                print(f\"Mean training loss for this epoch : {training_losses / len(training_dataset):.5f}\")\n",
-        "    training_losses /= len(training_dataset)"
+        "    #training_losses /= len(training_dataset)"
       ]
     },
     {
